--- a/ScratchComponents/css/file.css
+++ b/ScratchComponents/css/file.css
@@ -11,14 +11,13 @@ p {
 	display: flex;
 	border-bottom: 1px solid;
 	box-shadow: 0 4px 2px -2px gray;
-	height: 7vh;
 }
 .titleDiv {
 	flex: 1;
 	text-align: center;
 }
 .infoContainer {
-	height: 90vh;
+	/*height: calc(100%-titleDivHeight) ???*/
 	width: 100%;
 	overflow-y: scroll;
 }
