--- a/ScratchComponents/css/categories.css
+++ b/ScratchComponents/css/categories.css
@@ -7,11 +7,7 @@ p {
 .categoriesContainer {
 	text-align:center;
 	width: 100vw;
-	height: 15vw;
-}
-
-.innerContainer {
-	margin: auto;
+	height: 15vh;
 }
 
 .dropdownCategory {
@@ -20,9 +16,10 @@ p {
 	height: 10vw;
 	max-height: 65px;
 	max-width: 65px;
-	min-height: 40px;
-	min-width: 40px;
-	vertical-align: middle;
+	min-height: 35px;
+	min-width: 35px;
+	text-align: left;
+	position: relative;
 }
 
 .dropdownCategory:hover .subCategory {
@@ -35,9 +32,8 @@ p {
 	height: 10vw;
 	max-height: 65px;
 	max-width: 65px;
-	min-height: 40px;
-	min-width: 40px;
-	vertical-align: middle;
+	min-height: 35px;
+	min-width: 35px;
 	overflow: hidden;
 }
 
@@ -53,30 +49,46 @@ p {
 	text-align: left;
 	display: none;
 	background-color: white;
-	border-radius: 3vh;
+	border-radius: 7px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
-	position: absolute;
-	width: 230px;
+	position: absolute; 
+	white-space: nowrap;
+	width:auto; 
 	z-index: 1;
+}
+.subCategoryLeft {
+	left: 10px;
+}
+.subCategoryRight {
+	right: 0px;
 }
 .subCategory::before {
 	content: "";
 	position: absolute;
 	border-style: solid;
-	left: 15px;
 	border-width: 0 10px 8px 1px;
 	border-color: transparent transparent #ccc transparent;
 	top: -8px;
 }
-
+.subCategoryRight::before {
+	right: 15px;
+}
+.subCategoryLeft::before {
+	left: 15px;
+}
 .subCategory::after {
 	content: "";
 	position: absolute;
 	border-style:solid;
-	left:16px;
 	border-width: 0 9px 7px 0;
 	border-color: transparent transparent #fff transparent;
 	top: -7px;
+}
+.subCategoryRight::after {
+	right:16px;
+}
+.subCategoryLeft::after {
+	left:16px;
 }
 
 .subcategory:hover {
