--- a/ScratchComponents/static/css/components/search.css
+++ b/ScratchComponents/static/css/components/search.css
@@ -1,3 +1,14 @@
+.searchInstance {
+  box-shadow: 0 4px 2px -2px gray;
+  margin-left: auto;
+  margin-right: auto;
+  width: 94%;
+}
 
+.searchInstanceParagraph {
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
 
 /*# sourceMappingURL=search.css.map */
