--- a/ScratchComponents/static/css/components.css
+++ b/ScratchComponents/static/css/components.css
@@ -13,7 +13,7 @@
   text-align: center;
 }
 
-.infoContainer {
+.resultContainer {
   /*height: calc(100%-titleDivHeight) ???*/
   width: 100%;
   overflow-y: scroll;
@@ -23,47 +23,14 @@
   margin-top: 10px;
 }
 
-.info {
-  width: 94vw;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .infoTitle {
   box-shadow: 0 4px 2px -2px gray;
 }
 
-.searchInstance {
-  box-shadow: 0 4px 2px -2px gray;
+.info {
+  width: 94vw;
   margin-left: auto;
   margin-right: auto;
-  width: 94%;
-}
-
-.searchInstanceParagraph {
-  margin-left: auto;
-  margin-right: auto;
-  width: 90%;
-}
-
-.fas {
-  color: orange;
-  margin-right: 10px;
-  margin-left: 10px;
-}
-
-.fas.fa-chevron-up {
-  color: black;
-  margin-top: 3vh;
-  margin-bottom: 1vh;
-  height: 3vh;
-}
-
-.fas.fa-chevron-down {
-  color: black;
-  margin-top: 3vh;
-  margin-bottom: 1vh;
-  height: 3vh;
 }
 
 .image {
@@ -71,21 +38,6 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-
-.titleParagraph {
-  margin-block-start: 1vw;
-  margin-block-end: 1vw;
-  font-size: 18px;
-  color: orange;
-}
-
-.infoTitleParagraph {
-  font-size: 20px;
-}
-
-.text {
-  font-size: 18px;
 }
 
 @media only screen and (min-width: 600px) {
@@ -114,6 +66,19 @@
     width: 26vw;
   }
 }
+.searchInstance {
+  box-shadow: 0 4px 2px -2px gray;
+  margin-left: auto;
+  margin-right: auto;
+  width: 94%;
+}
+
+.searchInstanceParagraph {
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
+
 #mapid {
   height: 100%;
 }
@@ -171,14 +136,6 @@
   z-index: 1;
 }
 
-.subCategoryLeft {
-  left: 10px;
-}
-
-.subCategoryRight {
-  right: 0px;
-}
-
 .subCategory::before {
   content: "";
   position: absolute;
@@ -186,14 +143,6 @@
   border-width: 0 10px 8px 1px;
   border-color: transparent transparent #ccc transparent;
   top: -8px;
-}
-
-.subCategoryRight::before {
-  right: 15px;
-}
-
-.subCategoryLeft::before {
-  left: 15px;
 }
 
 .subCategory::after {
@@ -205,16 +154,32 @@
   top: -7px;
 }
 
-.subCategoryRight::after {
-  right: 16px;
+.subcategory:hover {
+  display: block;
+}
+
+.subCategoryLeft {
+  left: 10px;
+}
+
+.subCategoryLeft::before {
+  left: 15px;
 }
 
 .subCategoryLeft::after {
   left: 16px;
 }
 
-.subcategory:hover {
-  display: block;
+.subCategoryRight {
+  right: 0px;
+}
+
+.subCategoryRight::before {
+  right: 15px;
+}
+
+.subCategoryRight::after {
+  right: 16px;
 }
 
 @media only screen and (min-width: 650px) {
@@ -223,12 +188,12 @@
     height: 6vw;
   }
 
-  .category {
+  .dropdownCategory {
     width: 5vw;
     height: 5vw;
   }
 
-  .dropdownCategory {
+  .category {
     width: 5vw;
     height: 5vw;
   }
