--- a/ScratchComponents/static/css/components/itemVisualizer.css
+++ b/ScratchComponents/static/css/components/itemVisualizer.css
@@ -13,7 +13,7 @@
   text-align: center;
 }
 
-.infoContainer {
+.resultContainer {
   /*height: calc(100%-titleDivHeight) ???*/
   width: 100%;
   overflow-y: scroll;
@@ -23,47 +23,14 @@
   margin-top: 10px;
 }
 
-.info {
-  width: 94vw;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .infoTitle {
   box-shadow: 0 4px 2px -2px gray;
 }
 
-.searchInstance {
-  box-shadow: 0 4px 2px -2px gray;
+.info {
+  width: 94vw;
   margin-left: auto;
   margin-right: auto;
-  width: 94%;
-}
-
-.searchInstanceParagraph {
-  margin-left: auto;
-  margin-right: auto;
-  width: 90%;
-}
-
-.fas {
-  color: orange;
-  margin-right: 10px;
-  margin-left: 10px;
-}
-
-.fas.fa-chevron-up {
-  color: black;
-  margin-top: 3vh;
-  margin-bottom: 1vh;
-  height: 3vh;
-}
-
-.fas.fa-chevron-down {
-  color: black;
-  margin-top: 3vh;
-  margin-bottom: 1vh;
-  height: 3vh;
 }
 
 .image {
@@ -71,21 +38,6 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-
-.titleParagraph {
-  margin-block-start: 1vw;
-  margin-block-end: 1vw;
-  font-size: 18px;
-  color: orange;
-}
-
-.infoTitleParagraph {
-  font-size: 20px;
-}
-
-.text {
-  font-size: 18px;
 }
 
 @media only screen and (min-width: 600px) {
