--- a/ScratchComponents/static/css/components.css
+++ b/ScratchComponents/static/css/components.css
@@ -31,10 +31,10 @@
   color: #FB8464;
 }
 
-.mainContainer.Mobilität .titleParagraph {
+.mainContainer.Verkehr .titleParagraph {
   color: #846CEC;
 }
-.mainContainer.Mobilität .fas {
+.mainContainer.Verkehr .fas {
   color: #846CEC;
 }
 
@@ -46,10 +46,10 @@
 }
 
 .mainContainer.Wellness .titleParagraph {
-  color: #3D8CC4;
+  color: #E9E28C;
 }
 .mainContainer.Wellness .fas {
-  color: #3D8CC4;
+  color: #E9E28C;
 }
 
 .mainContainer.Winter .titleParagraph {
@@ -237,6 +237,38 @@
 
 .subCategoryRight::after {
   right: 16px;
+}
+
+.subCategoryTitleAnderes {
+  color: #6554B7;
+}
+
+.subCategoryTitleEssen {
+  color: #7fCC86;
+}
+
+.subCategoryTitleGeschäfte {
+  color: #E37454;
+}
+
+.subCategoryTitleKultur {
+  color: #FB8464;
+}
+
+.subCategoryTitleVerkehr {
+  color: #846CEC;
+}
+
+.subCategoryTitleSommer {
+  color: #3DDCD4;
+}
+
+.subCategoryTitleWellness {
+  color: #E9E28C;
+}
+
+.subCategoryTitleWinter {
+  color: #3D8CC4;
 }
 
 @media only screen and (min-width: 650px) {
