--- a/ScratchComponents/static/css/design.css
+++ b/ScratchComponents/static/css/design.css
@@ -73,10 +73,10 @@ html, body {
   color: #FB8464;
 }
 
-.mainContainer.Mobilität .titleParagraph {
+.mainContainer.Verkehr .titleParagraph {
   color: #846CEC;
 }
-.mainContainer.Mobilität .fas {
+.mainContainer.Verkehr .fas {
   color: #846CEC;
 }
 
@@ -88,10 +88,10 @@ html, body {
 }
 
 .mainContainer.Wellness .titleParagraph {
-  color: #3D8CC4;
+  color: #E9E28C;
 }
 .mainContainer.Wellness .fas {
-  color: #3D8CC4;
+  color: #E9E28C;
 }
 
 .mainContainer.Winter .titleParagraph {
@@ -279,6 +279,38 @@ html, body {
 
 .subCategoryRight::after {
   right: 16px;
+}
+
+.subCategoryTitleAnderes {
+  color: #6554B7;
+}
+
+.subCategoryTitleEssen {
+  color: #7fCC86;
+}
+
+.subCategoryTitleGeschäfte {
+  color: #E37454;
+}
+
+.subCategoryTitleKultur {
+  color: #FB8464;
+}
+
+.subCategoryTitleVerkehr {
+  color: #846CEC;
+}
+
+.subCategoryTitleSommer {
+  color: #3DDCD4;
+}
+
+.subCategoryTitleWellness {
+  color: #E9E28C;
+}
+
+.subCategoryTitleWinter {
+  color: #3D8CC4;
 }
 
 @media only screen and (min-width: 650px) {
