--- a/ScratchComponents/static/scss/components/itemVisualizer.scss
+++ b/ScratchComponents/static/scss/components/itemVisualizer.scss
@@ -33,7 +33,7 @@
 		color:#FB8464;
 	}
 }
-.mainContainer.Mobilität {
+.mainContainer.Verkehr {
 	.titleParagraph{
 		color:#846CEC;
 	}
@@ -51,10 +51,10 @@
 }
 .mainContainer.Wellness {
 	.titleParagraph{
-		color:#3D8CC4;
+		color:#E9E28C;
 	}
 	.fas{
-		color:#3D8CC4;
+		color:#E9E28C;
 	}
 }
 .mainContainer.Winter {
