--- a/ComponentStructure/static/scss/theme.scss
+++ b/ComponentStructure/static/scss/theme.scss
@@ -1,5 +1,12 @@
+*{
+	margin:0;
+	padding:0;
+	border:0;
+}
+
 p {
 	font-family: calibri, verdana, arial;
+	color:#70757A;
 }
 html, body {
 	height: 100%;
