--- a/ComponentStructure/static/css/atoms.css
+++ b/ComponentStructure/static/css/atoms.css
@@ -1,34 +1,42 @@
 .fas {
   margin-right: 10px;
-  margin-left: 10px;
-}
+  margin-left: 10px; }
 
 .fas.fa-chevron-up {
   color: black;
   margin-top: 3vh;
   margin-bottom: 1vh;
-  height: 3vh;
-}
+  height: 3vh; }
 
 .fas.fa-chevron-down {
   color: black;
   margin-top: 3vh;
   margin-bottom: 1vh;
-  height: 3vh;
-}
+  height: 3vh; }
 
 .text {
-  font-size: 18px;
-}
+  font-size: 14px; }
 
 .titleParagraph {
   margin-block-start: 1vw;
   margin-block-end: 1vw;
-  font-size: 18px;
-}
+  font-size: 18px; }
 
 .infoTitleParagraph {
-  font-size: 20px;
-}
+  font-size: 14px;
+  margin: 0; }
+
+input[type="text"] {
+  width: 100%;
+  border: solid 1px #eee;
+  border-radius: 5px;
+  font-size: 18px;
+  padding: 8px;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+  margin-top: 20px; }
+
+label {
+  font-family: arial; }
 
 /*# sourceMappingURL=atoms.css.map */
