--- a/ComponentStructure/static/css/components/itemVisualizer.css
+++ b/ComponentStructure/static/css/components/itemVisualizer.css
@@ -1,127 +1,100 @@
 @charset "UTF-8";
 .mainContainer {
-  width: 100vw;
-}
+  width: 100vw; }
 
 .mainContainer.Anderes .titleParagraph {
-  color: #6554B7;
-}
+  color: #6554B7; }
 .mainContainer.Anderes .fas {
-  color: #6554B7;
-}
+  color: #6554B7; }
 
 .mainContainer.Essen .titleParagraph {
-  color: #7fCC86;
-}
+  color: #7fCC86; }
 .mainContainer.Essen .fas {
-  color: #7fCC86;
-}
+  color: #7fCC86; }
 
 .mainContainer.Geschäfte .titleParagraph {
-  color: #E37454;
-}
+  color: #E37454; }
 .mainContainer.Geschäfte .fas {
-  color: #E37454;
-}
+  color: #E37454; }
 
 .mainContainer.Kultur .titleParagraph {
-  color: #FB8464;
-}
+  color: #FB8464; }
 .mainContainer.Kultur .fas {
-  color: #FB8464;
-}
+  color: #FB8464; }
 
 .mainContainer.Verkehr .titleParagraph {
-  color: #846CEC;
-}
+  color: #846CEC; }
 .mainContainer.Verkehr .fas {
-  color: #846CEC;
-}
+  color: #846CEC; }
 
 .mainContainer.Sommer .titleParagraph {
-  color: #3DDCD4;
-}
+  color: #3DDCD4; }
 .mainContainer.Sommer .fas {
-  color: #3DDCD4;
-}
+  color: #3DDCD4; }
 
 .mainContainer.Wellness .titleParagraph {
-  color: #E9E28C;
-}
+  color: #E9E28C; }
 .mainContainer.Wellness .fas {
-  color: #E9E28C;
-}
+  color: #E9E28C; }
 
 .mainContainer.Winter .titleParagraph {
-  color: #3D8CC4;
-}
+  color: #3D8CC4; }
 .mainContainer.Winter .fas {
-  color: #3D8CC4;
-}
+  color: #3D8CC4; }
 
 .title {
   display: flex;
-  border-bottom: 1px solid;
-  box-shadow: 0 4px 2px -2px gray;
-}
+  padding: 20px;
+  border-bottom: solid 1px #aaa; }
 
 .titleDiv {
   flex: 1;
-  text-align: center;
-}
+  text-align: center; }
 
 .resultContainer {
   /*height: calc(100%-titleDivHeight) ???*/
   width: 100%;
   overflow-y: scroll;
-}
-
-.itemInfo {
-  margin-top: 10px;
-}
+  font-size: 14px;
+  color: #70757A; }
 
 .infoTitle {
-  box-shadow: 0 4px 2px -2px gray;
-}
+  box-shadow: 0 4px 6px -2px #0000002b;
+  padding-top: 10px;
+  padding-bottom: 10px; }
 
 .info {
   width: 94vw;
   margin-left: auto;
-  margin-right: auto;
-}
+  margin-right: auto; }
 
 .image {
   width: 90vw;
   display: block;
   margin-left: auto;
-  margin-right: auto;
-}
+  margin-right: auto; }
 
 @media only screen and (min-width: 600px) {
   .mainContainer {
     width: 30vw;
-  }
+    max-height: 100vh;
+    overflow: scroll;
+    background: #fff;
+    box-shadow: 0 0 6px #0000001c; }
 
   .titleArrowDiv {
-    display: none;
-  }
+    display: none; }
 
   .itemInfo {
-    width: 28vw;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
-  }
+    margin-top: 10px; }
 
   .info {
-    width: 26vw;
-    margin-left: auto;
-    margin-right: auto;
-  }
+    padding: 20px;
+    width: calc(100% - 40px); }
 
   .image {
-    width: 26vw;
-  }
-}
+    width: 26vw; } }
 
 /*# sourceMappingURL=itemVisualizer.css.map */
