--- a/ComponentStructure/static/css/theme.css
+++ b/ComponentStructure/static/css/theme.css
@@ -1,10 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+  border: 0; }
+
 p {
   font-family: calibri, verdana, arial;
-}
+  color: #70757A; }
 
 html, body {
   height: 100%;
-  margin: 0px;
-}
+  margin: 0px; }
 
 /*# sourceMappingURL=theme.css.map */
