--- a/ComponentStructure/static/scss/atoms.scss
+++ b/ComponentStructure/static/scss/atoms.scss
@@ -16,7 +16,7 @@
 }
 
 .text{
-	font-size: 18px;
+	font-size: 14px;
 }
 
 
@@ -27,5 +27,21 @@
 }
 
 .infoTitleParagraph{
-	font-size: 20px;
+	font-size: 14px;
+	margin: 0;
+}
+
+input[type="text"]{
+	width: 100%;
+	border: solid 1px #eee;
+	border-radius: 5px;
+	font-size: 18px;
+	padding: 8px;
+	box-sizing: border-box;
+	margin-bottom: 20px;
+	margin-top: 20px;
+}
+
+label{
+	font-family: arial;
 }
