--- a/ComponentStructure/static/css/theme.css
+++ b/ComponentStructure/static/css/theme.css
@@ -1,7 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  border: 0; }
+  border: 0;
+  font-family: calibri, verdana, arial; }
 
 p {
   font-family: calibri, verdana, arial;
