--- a/ComponentStructure/static/scss/atoms.scss
+++ b/ComponentStructure/static/scss/atoms.scss
@@ -45,3 +45,16 @@ input[type="text"]{
 label{
 	font-family: arial;
 }
+
+button,a.button{
+	padding:10px 20px;
+	background:#3DDCD4;
+	border-radius:5px;
+	text-decoration:none;
+	color:#fff;
+	display: -webkit-inline-box;
+
+	&:hover{
+		cursor:pointer;
+	}
+}
