--- a/ComponentStructure/static/scss/components/itemVisualizer.scss
+++ b/ComponentStructure/static/scss/components/itemVisualizer.scss
@@ -8,6 +8,9 @@
 	.fas{
 		color:#6554B7;
 	}
+	.button{
+		background:#6554B7;
+	}
 }
 .mainContainer.Essen {
 	.titleParagraph{
@@ -15,6 +18,9 @@
 	}
 	.fas{
 		color:#7fCC86;
+	}
+	.button{
+		background:#7fCC86;
 	}
 }
 .mainContainer.Geschäfte {
@@ -24,6 +30,9 @@
 	.fas{
 		color:#E37454;
 	}
+	.button{
+		background:#E37454;
+	}
 }
 .mainContainer.Kultur {
 	.titleParagraph{
@@ -31,6 +40,9 @@
 	}
 	.fas{
 		color:#FB8464;
+	}
+	.button{
+		background:#FB8464;
 	}
 }
 .mainContainer.Verkehr {
@@ -40,6 +52,9 @@
 	.fas{
 		color:#846CEC;
 	}
+	.button{
+		background:#846CEC;
+	}
 }
 .mainContainer.Sommer {
 	.titleParagraph{
@@ -47,6 +62,9 @@
 	}
 	.fas{
 		color:#3DDCD4;
+	}
+	.button{
+		background:#3DDCD4;
 	}
 }
 .mainContainer.Wellness {
@@ -56,6 +74,9 @@
 	.fas{
 		color:#E9E28C;
 	}
+	.button{
+		background:#E9E28C;
+	}
 }
 .mainContainer.Winter {
 	.titleParagraph{
@@ -63,6 +84,9 @@
 	}
 	.fas{
 		color:#3D8CC4;
+	}
+	.button{
+		background:#3D8CC4;
 	}
 }
 .title {
