Search component animations open and close

--- a/ComponentStructure/static/scss/atoms.scss
+++ b/ComponentStructure/static/scss/atoms.scss
@@ -38,8 +38,8 @@ input[type="text"]{
 	font-size: 18px;
 	padding: 8px;
 	box-sizing: border-box;
-	margin-bottom: 20px;
-	margin-top: 20px;
+	//margin-bottom: 20px;
+	//margin-top: 20px;
 }
 
 label{
