--- a/ComponentStructure/static/css/atoms.css
+++ b/ComponentStructure/static/css/atoms.css
@@ -32,9 +32,7 @@ input[type="text"] {
   border-radius: 5px;
   font-size: 18px;
   padding: 8px;
-  box-sizing: border-box;
-  margin-bottom: 20px;
-  margin-top: 20px; }
+  box-sizing: border-box; }
 
 label {
   font-family: arial; }
