--- a/ComponentStructure/static/css/components.css
+++ b/ComponentStructure/static/css/components.css
@@ -124,7 +124,8 @@
   height: 100vh;
   overflow: scroll;
   box-shadow: 0 0 6px #0000001c;
-  padding: 20px; }
+  padding: 20px;
+  transition: 0.5s; }
 
 .searchInstance {
   border-bottom: solid 1px #ccc;
@@ -133,6 +134,35 @@
 .searchInstanceParagraph {
   margin-left: auto;
   margin-right: auto; }
+
+.notShowingResults {
+  max-height: 38px;
+  overflow: hidden; }
+
+.showingResults {
+  max-height: 100vh;
+  overflow: scroll; }
+
+.searchBox {
+  display: flex; }
+  .searchBox input[type="text"] {
+    width: 90%;
+    border: solid 1px #eee;
+    border-radius: 5px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    font-size: 18px;
+    padding: 8px;
+    box-sizing: border-box;
+    border-right: 0; }
+  .searchBox .action {
+    width: 10%;
+    border: solid 1px #eee;
+    border-left: 0;
+    border-radius: 5px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    margin: 0; }
 
 #mapid {
   height: 100%; }
