--- a/ComponentStructure/static/css/design.css
+++ b/ComponentStructure/static/css/design.css
@@ -2,8 +2,7 @@
 * {
   margin: 0;
   padding: 0;
-  border: 0;
-  font-family: calibri, verdana, arial; }
+  border: 0; }
 
 p {
   font-family: calibri, verdana, arial;
@@ -47,9 +46,7 @@ input[type="text"] {
   border-radius: 5px;
   font-size: 18px;
   padding: 8px;
-  box-sizing: border-box;
-  margin-bottom: 20px;
-  margin-top: 20px; }
+  box-sizing: border-box; }
 
 label {
   font-family: arial; }
@@ -189,7 +186,8 @@ button, a.button {
   height: 100vh;
   overflow: scroll;
   box-shadow: 0 0 6px #0000001c;
-  padding: 20px; }
+  padding: 20px;
+  transition: 0.5s; }
 
 .searchInstance {
   border-bottom: solid 1px #ccc;
@@ -198,6 +196,35 @@ button, a.button {
 .searchInstanceParagraph {
   margin-left: auto;
   margin-right: auto; }
+
+.notShowingResults {
+  max-height: 38px;
+  overflow: hidden; }
+
+.showingResults {
+  max-height: 100vh;
+  overflow: scroll; }
+
+.searchBox {
+  display: flex; }
+  .searchBox input[type="text"] {
+    width: 90%;
+    border: solid 1px #eee;
+    border-radius: 5px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    font-size: 18px;
+    padding: 8px;
+    box-sizing: border-box;
+    border-right: 0; }
+  .searchBox .action {
+    width: 10%;
+    border: solid 1px #eee;
+    border-left: 0;
+    border-radius: 5px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    margin: 0; }
 
 #mapid {
   height: 100%; }
