--- a/ComponentStructure/static/css/theme.css
+++ b/ComponentStructure/static/css/theme.css
@@ -1,8 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  border: 0;
-  font-family: calibri, verdana, arial; }
+  border: 0; }
 
 p {
   font-family: calibri, verdana, arial;
