--- a/ComponentStructure/static/scss/components/search.scss
+++ b/ComponentStructure/static/scss/components/search.scss
@@ -6,6 +6,8 @@
 	overflow: scroll;
 	box-shadow: 0 0 6px #0000001c;
 	padding: 20px;
+	transition:0.5s;
+
 }
 
 .searchInstance {
@@ -16,4 +18,42 @@
 .searchInstanceParagraph {
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.notShowingResults{
+	max-height: 38px;
+	overflow: hidden;
+}
+
+.showingResults{
+	max-height: 100vh;
+	overflow: scroll;
+}
+
+.searchBox{
+	display:flex;
+
+	input[type="text"]{
+		width: 90%;
+		border: solid 1px #eee;
+		border-radius: 5px;
+		border-top-right-radius:0;
+		border-bottom-right-radius:0;
+		font-size: 18px;
+		padding: 8px;
+		box-sizing: border-box;
+		border-right:0;
+		//margin-bottom: 20px;
+		//margin-top: 20px;
+	}
+
+	.action{
+		width:10%;
+		border: solid 1px #eee;
+		border-left:0;
+		border-radius: 5px;
+		border-top-left-radius:0;
+		border-bottom-left-radius:0;
+		margin:0;
+	}
 }
