--- a/ComponentStructure/static/css/components.css
+++ b/ComponentStructure/static/css/components.css
@@ -162,7 +162,9 @@
     border-radius: 5px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-    margin: 0; }
+    margin: 0;
+    font-size: 18px;
+    line-height: 36px; }
 
 #mapid {
   height: 100%; }
