--- a/ComponentStructure/static/css/components/search.css
+++ b/ComponentStructure/static/css/components/search.css
@@ -43,6 +43,8 @@
     border-radius: 5px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-    margin: 0; }
+    margin: 0;
+    font-size: 18px;
+    line-height: 36px; }
 
 /*# sourceMappingURL=search.css.map */
