--- a/ComponentStructure/static/css/design.css
+++ b/ComponentStructure/static/css/design.css
@@ -224,7 +224,9 @@ button, a.button {
     border-radius: 5px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-    margin: 0; }
+    margin: 0;
+    font-size: 18px;
+    line-height: 36px; }
 
 #mapid {
   height: 100%; }
