Changed homepage link (NOI logo onclick), alignment label in eventWizard and design bug fix eventlist

--- a/ComponentStructure/static/css/components/itemVisualizer.css
+++ b/ComponentStructure/static/css/components/itemVisualizer.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 .mainContainer {
-  width: 100vw; }
+  width: 100vw;
+  z-index: 9999; }
 
 .mainContainer.Anderes .titleParagraph {
   color: #6554B7; }
