--- a/ComponentStructure/static/css/components/search.css
+++ b/ComponentStructure/static/css/components/search.css
@@ -6,7 +6,8 @@
   overflow: scroll;
   box-shadow: 0 0 6px #0000001c;
   padding: 20px;
-  transition: 0.5s; }
+  transition: 0.5s;
+  z-index: 99999; }
 
 .searchInstance {
   border-bottom: solid 1px #ccc;
