--- a/ComponentStructure/static/css/components.css
+++ b/ComponentStructure/static/css/components.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 .mainContainer {
-  width: 100vw; }
+  width: 100vw;
+  z-index: 9999; }
 
 .mainContainer.Anderes .titleParagraph {
   color: #6554B7; }
@@ -125,7 +126,8 @@
   overflow: scroll;
   box-shadow: 0 0 6px #0000001c;
   padding: 20px;
-  transition: 0.5s; }
+  transition: 0.5s;
+  z-index: 99999; }
 
 .searchInstance {
   border-bottom: solid 1px #ccc;
