--- a/src/static/css/components.css
+++ b/src/static/css/components.css
@@ -9,56 +9,56 @@
 
 .mainContainer.Anderes .titleParagraph {
   color: #6554B7; }
-.mainContainer.Anderes .fas {
+.mainContainer.Anderes .fas, .mainContainer.Anderes svg {
   color: #6554B7; }
 .mainContainer.Anderes .button {
   background: #6554B7; }
 
 .mainContainer.Essen .titleParagraph {
   color: #7fCC86; }
-.mainContainer.Essen .fas {
+.mainContainer.Essen .fas, .mainContainer.Essen svg {
   color: #7fCC86; }
 .mainContainer.Essen .button {
   background: #7fCC86; }
 
 .mainContainer.Geschäfte .titleParagraph {
   color: #E37454; }
-.mainContainer.Geschäfte .fas {
+.mainContainer.Geschäfte .fas, .mainContainer.Geschäfte svg {
   color: #E37454; }
 .mainContainer.Geschäfte .button {
   background: #E37454; }
 
 .mainContainer.Kultur .titleParagraph {
   color: #FB8464; }
-.mainContainer.Kultur .fas {
+.mainContainer.Kultur .fas, .mainContainer.Kultur svg {
   color: #FB8464; }
 .mainContainer.Kultur .button {
   background: #FB8464; }
 
 .mainContainer.Verkehr .titleParagraph {
   color: #846CEC; }
-.mainContainer.Verkehr .fas {
+.mainContainer.Verkehr .fas, .mainContainer.Verkehr svg {
   color: #846CEC; }
 .mainContainer.Verkehr .button {
   background: #846CEC; }
 
 .mainContainer.Sommer .titleParagraph {
   color: #3DDCD4; }
-.mainContainer.Sommer .fas {
+.mainContainer.Sommer .fas, .mainContainer.Sommer svg {
   color: #3DDCD4; }
 .mainContainer.Sommer .button {
   background: #3DDCD4; }
 
 .mainContainer.Wellness .titleParagraph {
   color: #E9E28C; }
-.mainContainer.Wellness .fas {
+.mainContainer.Wellness .fas, .mainContainer.Wellness svg {
   color: #E9E28C; }
 .mainContainer.Wellness .button {
   background: #E9E28C; }
 
 .mainContainer.Winter .titleParagraph {
   color: #3D8CC4; }
-.mainContainer.Winter .fas {
+.mainContainer.Winter .fas, .mainContainer.Winter svg {
   color: #3D8CC4; }
 .mainContainer.Winter .button {
   background: #3D8CC4; }
@@ -88,11 +88,18 @@
   padding-top: 10px;
   padding-bottom: 10px;
   overflow: auto; }
-  .infoTitle .fas {
-    float: left; }
+  .infoTitle .fas, .infoTitle svg {
+    float: left;
+    height: 18px;
+    margin-right: 10px; }
   .infoTitle .infoTitleParagraph {
     width: calc(100% - 80px);
     float: left; }
+
+.fas, svg {
+  float: left;
+  height: 18px;
+  margin-right: 10px; }
 
 .info {
   width: auto;
@@ -163,9 +170,11 @@
   background: #fffbc1;
   left: 0;
   padding: 20px; }
-  .warning p, .warning i {
+  .warning p, .warning i, .warning img, .warning svg {
     color: #b3ab31;
     float: left; }
+  .warning img, .warning svg {
+    height: 18px; }
   .warning p {
     width: 90%;
     margin-left: 10px; }
@@ -226,7 +235,9 @@
     border-bottom-left-radius: 0;
     margin: 0;
     font-size: 18px;
-    line-height: 36px; }
+    line-height: 36px;
+    padding: 10px;
+    height: 18px; }
 
 #error {
   display: none;
