--- a/src/static/scss/components/search.scss
+++ b/src/static/scss/components/search.scss
@@ -33,10 +33,14 @@
 	left: 0;
 	padding: 20px;
 
-	p,i{
+	p,i,img,svg{
 		color:#b3ab31;
 		float:left;
 	}
+
+  img,svg{
+    height:18px;
+  }
 
 	p{
 		width: 90%;
@@ -121,6 +125,8 @@
 		margin:0;
 		font-size: 18px;
 		line-height: 36px;
+    padding: 10px;
+    height: 18px;
 	}
 }
 
