warning icon position responsive fixed

--- a/src/static/scss/components/search.scss
+++ b/src/static/scss/components/search.scss
@@ -40,11 +40,12 @@
 	}
 
   img,svg{
-    height:18px;
+    max-height: 18px;
+    max-width: 6%;
   }
 
 	p{
-		width: 90%;
+    max-width: 85%;
 		margin-left: 10px;
 	}
 }
