--- a/src/static/css/components.css
+++ b/src/static/css/components.css
@@ -174,9 +174,10 @@
     color: #b3ab31;
     float: left; }
   .warning img, .warning svg {
-    height: 18px; }
+    max-height: 18px;
+    max-width: 6%; }
   .warning p {
-    width: 90%;
+    max-width: 85%;
     margin-left: 10px; }
 
 .searchInstance {
