--- a/src/static/css/design.css
+++ b/src/static/css/design.css
@@ -70,7 +70,8 @@ button, a.button {
   background: white;
   height: 100vh;
   padding: 20px;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  overflow: auto; }
 
 .mainContainer.Anderes .titleParagraph {
   color: #6554B7; }
@@ -191,7 +192,7 @@ button, a.button {
   .mainContainer {
     width: 30vw;
     height: 100vh;
-    overflow: scroll;
+    overflow: auto;
     background: #fff;
     box-shadow: 0 0 6px #0000001c;
     padding: 20px; }
