--- a/src/static/scss/components/itemVisualizer.scss
+++ b/src/static/scss/components/itemVisualizer.scss
@@ -5,6 +5,7 @@
 	height: 100vh;
 	padding: 20px;
 	box-sizing: border-box;
+  overflow: auto;
 
 }
 .mainContainer.Anderes {
@@ -175,7 +176,7 @@
 	.mainContainer {
 		width: 30vw;
 		height: 100vh;
-		overflow: scroll;
+		overflow: auto;
 		background: #fff;
 		box-shadow: 0 0 6px #0000001c;
 		padding: 20px;
