--- a/src/static/css/design.css
+++ b/src/static/css/design.css
@@ -145,7 +145,7 @@ button, a.button {
 .resultContainer {
   /*height: calc(100%-titleDivHeight) ???*/
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: hidden;
   font-size: 14px;
   color: #70757A; }
 
