--- a/src/static/css/design.css
+++ b/src/static/css/design.css
@@ -70,7 +70,8 @@ button, a.button {
   background: white;
   height: 100vh;
   padding: 20px;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  overflow: auto; }
 
 .mainContainer.Anderes .titleParagraph {
   color: #6554B7; }
@@ -144,7 +145,7 @@ button, a.button {
 .resultContainer {
   /*height: calc(100%-titleDivHeight) ???*/
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: hidden;
   font-size: 14px;
   color: #70757A; }
 
@@ -191,7 +192,7 @@ button, a.button {
   .mainContainer {
     width: 30vw;
     height: 100vh;
-    overflow: scroll;
+    overflow: auto;
     background: #fff;
     box-shadow: 0 0 6px #0000001c;
     padding: 20px; }
@@ -239,9 +240,10 @@ button, a.button {
     color: #b3ab31;
     float: left; }
   .warning img, .warning svg {
-    height: 18px; }
+    max-height: 18px;
+    max-width: 6%; }
   .warning p {
-    width: 90%;
+    max-width: 85%;
     margin-left: 10px; }
 
 .searchInstance {
