--- a/src/static/scss/components/itemVisualizer.scss
+++ b/src/static/scss/components/itemVisualizer.scss
@@ -5,6 +5,7 @@
 	height: 100vh;
 	padding: 20px;
 	box-sizing: border-box;
+  overflow: auto;
 
 }
 .mainContainer.Anderes {
@@ -115,7 +116,7 @@
 .resultContainer {
 	/*height: calc(100%-titleDivHeight) ???*/
 	width: 100%;
-	overflow-y: scroll;
+	overflow-y: hidden;
 	font-size: 14px;
 	color: #70757A;
 }
@@ -175,7 +176,7 @@
 	.mainContainer {
 		width: 30vw;
 		height: 100vh;
-		overflow: scroll;
+		overflow: auto;
 		background: #fff;
 		box-shadow: 0 0 6px #0000001c;
 		padding: 20px;
