--- a/src/static/css/atoms.css
+++ b/src/static/css/atoms.css
@@ -1,30 +1,36 @@
 .fas {
   margin-right: 10px;
-  margin-left: 10px; }
+  margin-left: 10px;
+}
 
 .fas.fa-chevron-up {
   color: black;
   margin-top: 3vh;
   margin-bottom: 1vh;
-  height: 3vh; }
+  height: 3vh;
+}
 
 .fas.fa-chevron-down {
   color: black;
   margin-top: 3vh;
   margin-bottom: 1vh;
-  height: 3vh; }
+  height: 3vh;
+}
 
 .text {
-  font-size: 14px; }
+  font-size: 14px;
+}
 
 .titleParagraph {
   margin-block-start: 1vw;
   margin-block-end: 1vw;
-  font-size: 18px; }
+  font-size: 18px;
+}
 
 .infoTitleParagraph {
   font-size: 14px;
-  margin: 0; }
+  margin: 0;
+}
 
 input[type="text"] {
   width: 100%;
@@ -32,19 +38,23 @@ input[type="text"] {
   border-radius: 5px;
   font-size: 18px;
   padding: 8px;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 label {
-  font-family: arial; }
+  font-family: arial;
+}
 
-button, a.button {
+button,
+a.button {
   padding: 10px 20px;
-  background: #3DDCD4;
+  background: #3ddcd4;
   border-radius: 5px;
   text-decoration: none;
   color: #fff;
-  display: -webkit-inline-box; }
-  button:hover, a.button:hover {
-    cursor: pointer; }
-
-/*# sourceMappingURL=atoms.css.map */
+  display: -webkit-inline-box;
+}
+button:hover,
+a.button:hover {
+  cursor: pointer;
+}
