add spdx headers

--- a/src/static/scss/all.scss
+++ b/src/static/scss/all.scss
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: 2021 NOI Techpark <digital@noi.bz.it>
+ *
+ * SPDX-License-Identifier: AGPL-3.0-or-later
+ */
+
 /*!
  * Font Awesome Free 5.15.1 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
